--- a/frontend/src/Components/NewsLetter/NewsLetter.css
+++ b/frontend/src/Components/NewsLetter/NewsLetter.css
@@ -48,9 +48,14 @@
 .newsletter-subscribe button{
     width:200px;
     height: 70px;
+    border: none;
     border-radius: 80px;
     color:#fbffe1;
     background-color: black;
     font-size: 16px;
     cursor: pointer;
+}
+
+.newsletter-subscribe button:active{
+    background: #454545;
 }
